2008-02-18  Milan Crha  <mcrha@redhat.com>

	** Part of fix for bug #515744

	* gui/component/addressbook-migrate.c: (get_source_name):
	Memory leak fix.

2008-02-18  Srinivasa Ragavan  <sragavan@novell.com>

	* gui/merging/eab-contact-merging.c: (mergeit): Upstream patch from
	OpenSUSE.

2008-02-14  Matthew Barnes  <mbarnes@redhat.com>

	* gui/component/addressbook.c (addressbook_authenticate):
	Don't allow newlines in the password dialog title.  Use a fixed
	string instead.  (#516279)

2008-02-10  Suman Manjunath  <msuman@novell.com>

	** Fix for bug #510642

	* addressbook.error.xml: Improved string for read-only-addressbook
	error-message. 

2008-01-29  Matthew Barnes  <mbarnes@redhat.com>

	* gui/widgets/e-minicard.c:
	* gui/widgets/gal-view-minicard.c:
	Replace G_GNUC_FUNCTION (deprecated) with G_STRFUNC.

2008-01-25  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #512020

	* gui/widgets/e-addressbook-view.c: (get_master_list):
	Use only searchable categories, like in calendar.

2008-01-23  Djihed Afifi  <djihed@gmail.com>

	** Fix for bug #391408

	* gui/widgets/e-minicard-label.c:
	(e_minicard_label_resize_children):
	* gui/widgets/e-minicard.c: (add_field), (add_email_field):
	Fix contact minicards for RTL languages.

2008-01-22  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #503551

	* gui/widgets/e-minicard-view-widget.c: (selection_row_change):
	Emit selection changed signal even when unselecting, because
	we enable/disable menu items on selection change.

2008-01-21  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #324604 inspired by patch of makuchaku (Mayank)

	* gui/widgets/eab-gui-util.h:
	* gui/widgets/eab-gui-util.c: (eab_parse_qp_email),
	(eab_parse_qp_email_to_html): New helper functions for decoding
	email addresses from RFC822 or RFC2047 form to UTF-8.
	* gui/widgets/e-minicard.c: (add_email_field):
	* gui/widgets/eab-contact-display.c: (render_contact_list),
	(render_contact), (eab_contact_display_render_compact):